# gpu_suggestive_contours

./: CMakeLists.txt  Dockerfile  README.md  main_viewer.cc
runners/: IterateFolderFiles.cpp  Viewer.cpp  renderexample.cpp  rtsc.cc
src/: BoundaryDrawer.cpp  BoundaryDrawer.h  FPSCounter.cpp  Viewer.cpp
src/legacy_OpenGL/cpu_objectbased/msvc/: cpu_objectbased.vcxproj  custom_includes.props
src/ppm2bmp/: ppm2bmp.cpp  ppm2bmp.h
src/runners/: Viewer.cpp
src/sc_viewer/msvc/: sc_viewer.vcxproj  trimesh_includes.props
src/sc_viewer/src/: mesh_view.cc
